Remove non-container testing, minor fixes, refactoring and cleanup